api gate e disc serv